[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "Set panicking behavior to abort"
documentation = "https://japaric.github.io/panic-abort/panic_abort"
keywords = ["panic-impl", "panic-handler", "panic", "abort"]
license = "MIT OR Apache-2.0"
name = "panic-abort"
repository = "https://github.com/japaric/panic-abort"
version = "0.3.1"
